# sgsi_ext

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .lintstagedrc  .lintstagedrc.cjs  .pre-commit-config.yaml  .pre_commit_config.yaml  .prettierrc.json  .stylelintignore  .stylelintrc  Dockerfile  Jenkinsfile  LICENSE  Readme.md  build.sh  conftest.py  dj.sh  docker-compose.yml  gunicorn_conf.py  manage.py  package-lock.json  package.json  pyproject.toml  quickstart.sh  requirements.yml  reset.sh  setup.cfg  translate.sh  tsconfig.json  vite.config.js  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
.devcontainer/: devcontainer.json
.jenkins/: copy_ssh_host_keys.sh
ansible/: Readme.md  ansible-ssh  ansible.cfg  backup-db.sh  deploy.sh  deploy.yml  export-db.sh  import-db.sh  inventory.yml
ansible/group_vars/: all.yml
ansible/playbooks/: backup-db.yml  check-cloned.yml  deploy.yml  restore-dump.yml  stat_dotenv.yml
ansible/scripts/: create_dump.sh  offer_superuser.sh
ansible/templates/: nginx.env.j2
api_client/: README.md  admin.py  apps.py  conftest.py  db_router.py  enums.py  fixtures.py  managers.py  signals.py  tasks.py
api_client/migrations/: 0001_initial.py  0002_clientconfig_created_by_clientconfig_updated_by.py
api_client/models/: __init__.py  client_config.py  client_log.py  disabled_client.py
api_client/tests/: api_client_admin_tests.py  api_client_config_tests.py  api_client_tests.py  auth_tests.py  base_api_client_tests.py  conftest.py  json_api_client_tests.py  test_api_client.py  test_api_client_admin.py  test_api_client_querysets.py  test_auth.py  test_base_api_client.py  test_json_api_client.py  test_tasks.py  test_utils.py  utils_tests.py
assets/ts/: component-loader.ts  index.ts  status.ts
base/: __init__.py  admin.py  admin_site.py  apps.py  context_processors.py  db_router.py  fields.py  fixtures.py  forms.py  managers.py  middleware.py  mixins.py  mockups.py  models.py  serializers.py  signals.py  tasks.py  tests.py  utils.py  view_utils.py  views.py
base/fields/: __init__.py  base.py  functions.py
base/management/: print_TODOs.py  print_to_dos.py
base/migrations/: 0001_initial.py
base/models/: __init__.py  base_model.py  client_log.py  file_integrity_mixin.py  increment_field_mixin.py  orderable_model.py  version_mixin.py  versionable_mixin.py
base/templates/: base.html  base.pug  form.html  form.pug  index.html  index.pug  status.html  status.pug
base/templatetags/: environment_badge.py  file.py  order_by_querystring.py  path_to_uri.py
base/tests/: __init__.py  base_api_client_tests.py  base_test_case.py  check_error_pages_tests.py  conftest.py  test_admin_site.py  test_base_form.py  test_debug_views.py  test_error_pages.py  test_fields.py  test_fixtures.py  test_middlewares.py  test_orderable_model.py  test_serializers.py  test_signals.py  test_tasks.py  test_templatetags.py  test_urls.py  test_utils.py  test_view_misc.py  test_view_mixins.py  test_view_permissions.py  test_view_utils.py  url_helper.py  urls_tests.py  utils_tests.py
base/views/: debug.py  formsets.py  misc.py  mixins.py
db_dumps/: .gitkeep
docker/: .env.example  ci_env  development.env  development.env.example  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.jenkins.yml  docker-compose.prod.yml  prod_entrypoint.sh
docker/django/: gunicorn_conf.py  prod_cmd.sh  prod_entrypoint.sh  production_cmd.sh  venv_to_dotenv.sh
docker/nginx/: Dockerfile  default.conf.template
docker/nginx_templates/: default.conf.template
docker/postgres/: 70-initialize-log-db.sh  Dockerfile  initlogdb  magnet-entrypoint.sh
docker/volumes/: Readme.md
docker/zsh/: load-devcontainer-customs.zsh  production.zsh-theme  production.zshrc  robbyrussell-poetryenv.zsh-theme  setup.sh  setup_prod.sh
docker/zsh_dev/: 50-aliases.zsh  50-dj-aliases.zsh  robbyrussell-poetryenv.zsh-theme  setup_dev.sh  virtualenv_name.zsh
docker/zsh_prod/: prod.zshrc  production.zsh-theme  setup_prod.sh
docker/zshcustom/: 10-poetry-shell.zsh
docs/: README.md  ansible-deployment.md  celery.md  jenkins-deployment.md  jenkins.md  recaptcha.md  reference.md  testing.md
docs/examples/: Jenkinsfile.autodeploy
docs/rfc/: 2023-11-15-BaseRFC.md  2023-11-15-PlantUmlRFC.md  2023-11-28-DeployArchitectureRFC.md  2023-11-29-DPTArchitectureBaseRFC.md  2023-11-30-DPTArchitectureParametersRFC.md  InitialModellingRFC.md  (+3 more)
documents/: admin.py  apps.py  fixtures.py  forms.py  managers.py  tasks.py  tests.py  urls.py  views.py
dummy_app/: apps.py  urls.py  viewsets.py
information_assets/: admin.py  apps.py  enums.py  fixtures.py  forms.py  managers.py  urls.py
locale/: TODO.txt
messaging/: email_manager.py  tests.py  views.py
parameters/: __init__.py  admin.py  apps.py  conftest.py  definitions.py  enums.py  fixtures.py  forms.py  managers.py  models.py  tests.py  validators.py
processes/: admin.py  apps.py  enums.py  fixtures.py  forms.py  managers.py  tasks.py  urls.py
project/: .todoignore  __init__.py  asgi.py  celeryconf.py  logging.py  settings.py  storage_backends.py  test_runner.py  test_settings.py  tests.py  urls.py  wsgi.py
regions/: apps.py  conftest.py  fixtures.py  models.py  serializers.py  serializers.py.3408af21aba835793402bb962cd6e575.tmp  tests.py  urls.py  views.py  views.py.5e39add1fe595b53052c5e36e0842866.tmp  viewsets.py  viewsets.py.02e39a4ea3b07f546f6e7c9eeec7de07.tmp
risks/: admin.py  apps.py  enums.py  fixtures.py  forms.py  managers.py  urls.py
scripts/: add-aliases.sh  add-djaliases.sh  assert-15432-free.sh  assert-5432-free.sh  assert-npm-inside-container.sh  check-project-name.sh  docker-install.sh  env-init-dev.sh  env-init-prod.sh  env-init.sh  set-vscode-settings.sh  utils.sh  vscode-launch.json
users/: admin.py  admin.py.9df3b4b991596824017d4fdc2773d98c.tmp  apps.py  fixtures.py  forms.py  forms.py.d5bd64ae8a4418ff4bfbfa36d09f7edf.tmp  managers.py  models.py  models.py.bfdd63a6c6edec10fc260cab0c16755d.tmp  tests.py  urls.py  views.py  views.py.7925b676acecc967845b76fbb45e7ee4.tmp
(+419 files in other folders)
